--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 torch>=2.0.0
 transformers>=4.30.0
-vllm>=0.2.0; platform_system != "Windows"
+vllm==0.8.4; platform_system != "Windows"
 regex>=2023.0.0
